# analytics-panel

./: Cargo.toml  Makefile  README.md  justfile  sample.json
data/: hp-tco-certified.desktop  pop_analytics_panel.h
debian/: changelog  control  copyright  libpop-analytics-panel-dev.install  libpop-analytics-panel.install  rules
examples/: eula.rs  initial-setup.rs  summary.rs
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs
i18n/en/: pop_analytics_panel.ftl
src/: clamp.rs  lib.rs  localize.rs  main.rs  misc.rs
src/components/: dialog.rs  mod.rs  panel.rs  summary.rs
src/components/hp/: dialog.rs  eula.md  eula.rs  initial_setup.rs  mod.rs  panel.rs  summary.rs
