[package]
name = "pop-analytics-panel"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "ffi", "tools" ]

[dependencies]
cascade = "1.0.0"
anyhow = "1.0.56"
gtk = "0.15.4"
hp-vendor-client = { git = "https://github.com/pop-os/hp-vendor" }
relm = "0.23.0"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.3.0"
relm-derive = "0.23.0"
once_cell = "1.10.0"
flate2 = "1.0.23"
glib = "0.15.10"
gio = "0.15.10"
libhandy = "0.9"
serde_json = "1.0.79"
dirs = "4.0.0"
concat-in-place = "1.1.0"
locale_config = "0.3"
unic-langid = "0.9.0"

[features]
