[package]
name = "pop-analytics-panel"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "ffi", "tools" ]

[dependencies]
cascade = "1.0.1"
anyhow = "1.0.65"
gtk = "0.15.5"
hp-vendor-client = { git = "https://github.com/pop-os/hp-vendor" }
relm = "0.23.0"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.1"
relm-derive = "0.23.0"
once_cell = "1.15.0"
flate2 = "1.0.24"
glib = "0.15.12"
gio = "0.15.12"
libhandy = "0.9.0"
serde_json = "1.0.85"
dirs = "4.0.0"
concat-in-place = "1.1.0"
locale_config = "0.3.0"
unic-langid = "0.9.0"

[features]
